--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -9,12 +9,12 @@
   <%= form_with model: @category, url: categories_path, html: { class: 'card' } do |f| %>
     <div class="card-body">
       <div class="form-group">
-        <%= f.label :name %>
+        <%= f.label :Category_name %>
         <%= f.text_field :name, autocomplete: "name", class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.label :icon %>
+        <%= f.label :icon_link %>
         <%= f.text_field :icon, autocomplete: "name", class: "form-control" %>
       </div>
 
