--- a/app/views/static_pages/splash.html.erb
+++ b/app/views/static_pages/splash.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100vh;">
-  <h1>Dinero</h1>
+  <h1>Manago</h1>
   <p>Kindly log in or create an account to begin.</p>
   <div>
     <%= link_to "Sign In", new_user_session_path, class: "btn btn-primary" %>
