--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
+
 <div class="d-flex justify-content-between">
   <h3>All Categories</h3>
+ 
+  
   <%= link_to 'Sign out', let_user_logout_path, method: :delete %>
 </div>
 
@@ -30,6 +33,7 @@
     <% end %>
   </div>
   <div class="text-center mt-3">
-    <%= link_to 'Add A New Category', new_category_path, class: "btn btn-primary" %>
+  <%= link_to "ADD A NEW CATEGORY", new_category_path, class: 'btn-success green-button btn-block fixed-bottom border border-light text-white py-3' %>
+
   </div>
 </div>
