--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,7 +1,10 @@
+<!-- Include Font Awesome CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="app/assets/stylesheets/application.css">
+
 <div class="container mt-5">
   <div class="d-flex justify-content-between bg-primary text-light align-items-center">
     <%= link_to categories_path do %>
-      <i class="bx bxs-chevron-left display-4 text-white"></i>
+      <i class="bx bxs-chevron-left display-4 text-white"><</i>
     <% end %>
     <h5 class="card-title">Add New Category</h5>
   </div>
@@ -9,17 +12,17 @@
   <%= form_with model: @category, url: categories_path, html: { class: 'card' } do |f| %>
     <div class="card-body">
       <div class="form-group">
-        <%= f.label :Category_name %>
+        <%= f.label :name %>
         <%= f.text_field :name, autocomplete: "name", class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.label :icon_link %>
+        <%= f.label :icon %>
         <%= f.text_field :icon, autocomplete: "name", class: "form-control" %>
       </div>
 
       <div class="text-center mt-4">
-        <%= f.submit "Add Category", class: "btn btn-primary" %>
+        <%= f.submit "Add Category", class: 'btn-success green-button btn-block fixed-bottom border border-light text-white py-3' %>
       </div>
     </div>
   <% end %>
