--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container mt-0">
 <div class="d-flex justify-content-between bg-primary text-light align-items-center">
 <%= link_to categories_path do %>
-  <i class="bx bxs-chevron-left display-4 text-white"></i>
+  <i class="bx bxs-chevron-left display-4 text-white"><</i>
 <% end %>
   <h3 class="card-title"><%= @category.name %></h3>
   <h3 class="card-subtitle">$<%= @total %></h3>
@@ -23,7 +23,7 @@
             <% end %>
           </div>
           <div class="text-center mt-4">
-            <%= link_to 'Add Transaction', new_category_purchase_path(@category), class: "btn btn-primary" %>
+            <%= link_to 'Add Transaction', new_category_purchase_path(@category), class: 'btn-success green-button btn-block fixed-bottom border border-light text-white py-3' %>
           </div>
         </div>
       </div>
